--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
 <style>
 	.bestiary_list {display:none;}
+	#bestiary > table { position: absolute; top: 20%; bottom: 20%; left: 30%; right: 30%;}
 </style>
 
 <html>
 <body>
-	<div id="navbar"><a href="http://star-fall.boards.net/">&lt; HOME</div>
+	<div id="navbar">
+		<a href="http://star-fall.boards.net/">&lt; HOME</a>
+	</div>
 	<div id="bestiary">
 		<h1>Bestiary</h1>
 		<table><tr><td colspan=2>filter conditions</td></tr>
 			<tr><td>sort and list</td><td>results</td></tr>
 		</table>
 		<div id="bestiary_list">
-
+			<div class="beast">
+				<div class="name">Giant Cave Weavers</div>
+				<div class="properties">beast earth</div>
+				<div class="ecology">Forests, Southern</div>
+				<div class="description">7 meter tall arachnids with venom strong enough to paralyze a human.</div>
+			</div>
+			<div class="beast">
+				<div class="name"></div>
+				<div class="properties"></div>
+				<div class="description"></div>
+			</div>
+			<div class="beast">
+				<div class="name"></div>
+				<div class="properties"></div>
+				<div class="description"></div>
+			</div>
+			<div class="beast">
+				<div class="name"></div>
+				<div class="properties"></div>
+				<div class="description"></div>
+			</div>
 		</div>
 	</div>
 </body>
