--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -8,27 +8,27 @@
    $(document).ready(loadContent);
    function loadContent()
    {
-      var QueryURL = “http://anyorigin.com/get?url=” + ExternalURL + “&callback=?”;
+      var QueryURL = "http://anyorigin.com/get?url=" + ExternalURL + "&callback=?";
       $.getJSON(QueryURL, function(data){
-         if (data && data != null && typeof data == “object” && data.contents && data.contents != null && typeof data.contents == “string”)
+         if (data && data != null && typeof data == "object" && data.contents && data.contents != null && typeof data.contents == "string")
          {
-            data = data.contents.replace(/<script[^>]*>[sS]*?</script>/gi, ”);
+            data = data.contents.replace(/<script[^>]*>[sS]*?</script>/gi, "");
             if (data.length > 0)
             {
-               if (ContentLocationInDOM && ContentLocationInDOM != null && ContentLocationInDOM != “null”)
+               if (ContentLocationInDOM && ContentLocationInDOM != null && ContentLocationInDOM != "null")
                {
-                  $(‘#queryResultContainer’).html($(ContentLocationInDOM, data));
+                  $('#queryResultContainer').html($(ContentLocationInDOM, data));
                }
                else
                {
-                  $(‘#queryResultContainer’).html(data);
+                  $('#queryResultContainer').html(data);
                }
             }
          }
       });
    }
 </script>
-<div id=”queryResultContainer”/>
+<div id="queryResultContainer"/>
 
 <style>
 	.bestiary_list {display:none;}
