--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<script type=”text/javascript”>
+<script type="text/javascript">
    var ExternalURL = "docs.google.com/spreadsheets/d/1frzydbUxPP8IsshA60zzUHn_PIxSNi6zlZ8zw3vsgM8/pubhtml?gid=0&single=true&chrome=false&range=A:D"; // This address must not contain any leading “http://”
    var ContentLocationInDOM = "null"; // If you’re trying to get sub-content from the page, specify the “CSS style” jQuery syntax here, otherwise set this to “null”
 
@@ -12,7 +12,7 @@
       $.getJSON(QueryURL, function(data){
          if (data && data != null && typeof data == "object" && data.contents && data.contents != null && typeof data.contents == "string")
          {
-            data = data.contents.replace(/<script[^>]*>[sS]*?</script>/gi, "");
+            data = data.contents.replace("/<script[^>]*>[sS]*?</script>/gi", "");
             if (data.length > 0)
             {
                if (ContentLocationInDOM && ContentLocationInDOM != null && ContentLocationInDOM != "null")
