--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>
 
 <script type="text/javascript">
-   $.getJSON('https://docs.google.com/spreadsheets/u/1/d/1frzydbUxPP8IsshA60zzUHn_PIxSNi6zlZ8zw3vsgM8/pubhtml?gid=0&single=true&chrome=false&range=A:D', function(data){
-	var entry = data.feed.entry;
-
-  $(entry).each(function(){
-    // Column names are name, age, etc.
-    $('.results').prepend('<h2>'+this.gsx$name.$t+'</h2><p>'+this.gsx$age.$t+'</p>');
-  });
+   var ranges = [
+  'Name',	'Properties',	'Environment',	'Description'
+];
+gapi.client.sheets.spreadsheets.values.batchGet({
+   spreadsheetId: '1frzydbUxPP8IsshA60zzUHn_PIxSNi6zlZ8zw3vsgM8',
+   ranges: ranges
+}).then((response) => {
+  var result = response.result;
+  console.log(`${result.valueRanges.length} ranges retrieved.`);
 });
 </script>
 <div id="queryResultContainer"/>
