--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>
+<script src="https://apis.google.com/js/api.js"></script>
 
 <script type="text/javascript">
    var ranges = [
