--- a/comics/comics.html
+++ b/comics/comics.html
@@ -10,7 +10,7 @@ $.ajax({
   url: 'https://www.gocomics.com/calvinandhobbes/2018/07/29',
   contentType: 'application/json',
   dataType:'jsonp',
-  responseType:'application/json',
+  responseType:'text/html',
   xhrFields: {
     withCredentials: false
   },
