--- a/comics/comics.html
+++ b/comics/comics.html
@@ -2,39 +2,11 @@
 <html>
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-<script type="text/javascript">
-
-$.ajax({
-  type: 'GET',
-  url: 'https://www.gocomics.com/calvinandhobbes/2018/07/29',
-  contentType: 'text/html',
-  /*dataType:'jsonp',*/
-  responseType:'text/html',
-  xhrFields: {
-    withCredentials: false
-  },
-  headers: {
-    'Access-Control-Allow-Credentials' : true,
-    'Access-Control-Allow-Origin':'*',
-    'Access-Control-Allow-Methods':'GET',
-    'Access-Control-Allow-Headers':'text/html',
-    'Content-Type': 'text/html',
-  },
-  success: function(data) {
-    console.log(data);
-  },
-  error: function(error) {
-    console.log("FAIL....=================");
-  }
-});
-
-
-</script>
+<script type="text/javascript" src="comics.js"></script>
 </head>
 
 <html>
 <body>
-	<div class="result"/>
+	<div class="result"></div>
 </body>
 </html>
