--- a/comics/comics.html
+++ b/comics/comics.html
@@ -2,7 +2,17 @@
 <html>
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="comics.js"></script>
+<script type="text/javascript">
+	$.ajax({
+	    type: 'GET',
+	    url: "https://www.gocomics.com/calvinandhobbes/2018/07/29",
+	    headers: {
+	        "Access-Control-Allow-Origin": "*"
+	    }
+	}).done(function(data) { 
+	    alert(data);
+	});
+</script>
 </head>
 
 <html>
