--- a/comics/comics.html
+++ b/comics/comics.html
@@ -3,9 +3,14 @@
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript">
+
+// Don't enforce the same-origin policy. (Used by people testing their sites.)
+const wchar_t kDisableWebSecurity[] = L"disable-web-security";
+
 	$.ajax({
 	    type: 'GET',
 	    url: "https://www.gocomics.com/calvinandhobbes/2018/07/29",
+	    dataType: 'jsonp',
 	    headers: {
 	        "Access-Control-Allow-Origin": "*"
 	    }
