--- a/comics/comics.html
+++ b/comics/comics.html
@@ -6,7 +6,7 @@
 
 	$.ajax({
 	    type: 'GET',
-	    url: "https://www.gocomics.com/calvinandhobbes/2018/07/29",
+	    url: "https://crossorigin.me/https://www.gocomics.com/calvinandhobbes/2018/07/29",
 	    dataType: 'jsonp',
 	    headers: {
 	        "Access-Control-Allow-Origin": "*"
