--- a/comics/comics.html
+++ b/comics/comics.html
@@ -51,12 +51,9 @@ textarea {
     Url to be fetched (example: <a href="//robwu.nl/dump.php">robwu.nl/dump.php</a>)
     <input type="url" id="url" value="">
   </label>
+
   <label>
-    If using POST, enter the data:
-    <input type="text" id="data">
-  </label>
-  <label>
-    <button id="get">GET</button><button id="post">POST</button>
+    <button id="get">GET</button>
   </label>
 </div>
 <div id="bottom">
@@ -86,11 +83,10 @@ textarea {
     var urlField = document.getElementById('url');
     var dataField = document.getElementById('data');
     var outputField = document.getElementById('output');
-    document.getElementById('get').onclick =
-    document.getElementById('post').onclick = function(e) {
+    document.getElementById('get').onclick = function(e) {
       e.preventDefault();
       doCORSRequest({
-        method: this.id === 'post' ? 'POST' : 'GET',
+        method: 'GET',
         url: urlField.value,
         data: dataField.value
       }, function printResult(result) {
