--- a/comics/comics.html
+++ b/comics/comics.html
@@ -81,14 +81,12 @@ textarea {
   // Bind event
   (function() {
     var urlField = document.getElementById('url');
-    var dataField = document.getElementById('data');
     var outputField = document.getElementById('output');
     document.getElementById('get').onclick = function(e) {
       e.preventDefault();
       doCORSRequest({
         method: 'GET',
-        url: urlField.value,
-        data: dataField.value
+        url: urlField.value
       }, function printResult(result) {
         outputField.value = result;
       });
