--- a/comics/comics.html
+++ b/comics/comics.html
@@ -61,7 +61,7 @@ textarea {
 <script>
   var cors_api_url = 'https://cors-anywhere.herokuapp.com/';
 
-  var comics = {
+  var comics = [
   	'calvinandhobbes',
   	'garfield',
   	'foxtrot',
@@ -83,7 +83,7 @@ textarea {
   	'momma',
   	'nestheads',
   	'pickles'
-  };
+  ];
 
   function doCORSRequest(options, printResult) {
     var x = new XMLHttpRequest();
@@ -113,7 +113,7 @@ textarea {
       }, function printResult(result) {
 
         outputField.value = result.find('h2.media-heading');
-        
+
       });
     };
   })();
