--- a/comics/comics.html
+++ b/comics/comics.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <html>
 <head>
 <meta charset="utf-8">
