--- a/comics/comics.html
+++ b/comics/comics.html
@@ -113,7 +113,7 @@ textarea {
         url: urlField.value
       }, function printResult(result) {
       	console.log(result);
-        outputField.value = $(result).find('h2.media-heading');
+        outputField.value = $.parseHTML( result ).find('h2.media-heading');
 
       });
     };
