--- a/comics/comics.html
+++ b/comics/comics.html
@@ -112,7 +112,7 @@ textarea {
         method: 'GET',
         url: urlField.value
       }, function printResult(result) {
-      	console.log(result);
+      	console.log(parseHTML(result));
         outputField.value = $.parseHTML( result ).find('h2.media-heading');
 
       });
