--- a/comics/comics.html
+++ b/comics/comics.html
@@ -108,8 +108,8 @@ textarea {
         method: 'GET',
         url: urlField.value
       }, function printResult(result) {
-      	console.log(parseHTML(result));
-        outputField.value = $.parseHTML( result ).find('h2.media-heading');
+      	console.log($.parseHTML(result));
+        /*outputField.value = $.parseHTML( result ).find('h2.media-heading');*/
 
       });
     };
