--- a/comics/comics.html
+++ b/comics/comics.html
@@ -108,7 +108,7 @@ textarea {
         method: 'GET',
         url: urlField.value
       }, function printResult(result) {
-      	console.log($('.comic__image img', $.parseHTML(result)).['dataset'])
+      	console.log($('.comic__image img', $.parseHTML(result))['dataset'])
       	/*console.log($.parseHTML(result));
         outputField.value = $.parseHTML( result ).find('h2.media-heading');*/
 
