--- a/comics/comics.html
+++ b/comics/comics.html
@@ -97,10 +97,16 @@ textarea {
     x.send(options.data);
   }
 
+  function printGoComics(result) {
+      	var imgsrc = $('.comic__image img.img-fluid', $.parseHTML(result)).attr('src');
+      	console.log(imgsrc);
+      	$("#bottom").append('<img src="' + imgsrc + '">');
+        /*outputField.value = $.parseHTML( result ).find('h2.media-heading');*/
+    }
+
   // Bind event
   (function() {
     var urlField = document.getElementById('url');
-    var outputField = document.getElementById('output');
     document.getElementById('get').onclick = function(e) {
       e.preventDefault();
       doCORSRequest({
@@ -115,10 +121,15 @@ textarea {
       });
     };
   })();
-  if (typeof console === 'object') {
-    console.log('// To test a local CORS Anywhere server, set cors_api_url. For example:');
-    console.log('cors_api_url = "http://localhost:8080/"');
-  }
+  $( document ).ready(function() {
+    for(var n = 0; comics.length; n++){
+    	doCORSRequest({
+        method: 'GET',
+        url: 'https://www.gocomics.com/+' comics[n] '+/2018/07/31'
+      }, printGoComics(result)
+      });
+    }
+  });
 </script>
 </body>
 </html>
