--- a/comics/comics.html
+++ b/comics/comics.html
@@ -122,10 +122,10 @@ textarea {
     };
   })();
   $( document ).ready(function() {
-    for(var n = 0; comics.length; n++){
+    for(var n = 0; n < comics.length; n++){
     	doCORSRequest({
         method: 'GET',
-        url: 'https://www.gocomics.com/+' comics[n] '+/2018/07/31'
+        url: 'https://www.gocomics.com/' + comics[n] + '/2018/07/31'
       }, printGoComics(result)
       });
     }
