--- a/comics/comics.html
+++ b/comics/comics.html
@@ -17,44 +17,13 @@ html, body {
   -moz-box-sizing: border-box;
        box-sizing: border-box;
 }
-label { display: block; }
-input {
-  display: block;
-  width: 100%;
-  padding: 8px 5px;
-  border: 1px solid #CCC;
-}
-button {
-  display: inline-block;
-  width: 49%;
-  padding: 8px;
-}
-textarea {
-  width: 100%;
-  height: 100%;
-}
-#top {
-  height: 180px;
-  position: relative;
-
-}
 #bottom {
-  height: 100%;
-  margin-top: -180px;
-  padding-top: 180px;
+  text-align: center;
+  vertical-align: middle;
 }
 </style>
 </head>
 <body>
-<div id="top">
-  <label>
-    <input type="url" id="url" value="">
-  </label>
-
-  <label>
-    <button id="get">GET</button>
-  </label>
-</div>
 <div id="bottom">
 </div>
 
@@ -98,7 +67,7 @@ textarea {
   }
 
   // Bind event
-  (function() {
+  /*(function() {
     var urlField = document.getElementById('url');
     document.getElementById('get').onclick = function(e) {
       e.preventDefault();
@@ -110,11 +79,10 @@ textarea {
       	var comictitle = $('h2.media-heading', $.parseHTML(result));
       	console.log(imgsrc);
       	$("#bottom").append('<table style="display: inline-block"><tr><td style="text-align:left;"><b>'+comictitle+'</b></td></tr><tr><td><img src="' + imgsrc + '"></td></tr></table>');
-        /*outputField.value = $.parseHTML( result ).find('h2.media-heading');*/
-
       });
     };
-  })();
+  })();*/
+
   $( document ).ready(function() {
     for(var n = 0; n < comics.length; n++){
     	console.log('https://www.gocomics.com/' + comics[n] + '/2018/07/31');
@@ -124,7 +92,7 @@ textarea {
       		}, function printGoComics(result) {
 		      	var imgsrc = $('.comic__image img.img-fluid', $.parseHTML(result)).attr('src');
 		      	var comictitle = $('h2.media-heading', $.parseHTML(result));
-		      	console.log(imgsrc);
+		      	console.log(comictitle);
 		      	$("#bottom").append('<table style="display: inline-block; margin: 10px;"><tr><td style="text-align:left;"><b>'+comictitle+'</b></td></tr><tr><td><img src="' + imgsrc + '"></td></tr></table>');
 		    }
     	);
