--- a/comics/comics.html
+++ b/comics/comics.html
@@ -32,7 +32,14 @@ html, body {
 
   var comics = [
   	'calvinandhobbes',
+  	'overthehedge',
   	'garfield',
+  	'shoe',
+  	'the-best-medicine',
+  	'freerange',
+  	'theargylesweater',
+  	'frazz',
+  	'looseparts',
   	'foxtrot',
   	'doonesbury',
   	'peanuts',
@@ -51,7 +58,9 @@ html, body {
   	'fowl-language',
   	'momma',
   	'nestheads',
-  	'pickles'
+  	'pickles',
+  	'speedbump',
+  	'stonesoup'
   ];
 
   function doCORSRequest(options, printResult) {
