--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -34,7 +34,8 @@
 
 <style>
 	#bestiary_list {display:none;}
-	#bestiary > table { position: absolute; top: 20%; bottom: 20%; left: 30%; right: 30%;}
+	#bestiary { position: absolute; top: 20%; bottom: 20%; left: 30%; right: 30%; }
+	#bestiary > table { width: 100%; height: 100%;}
 </style>
 
 <html>
@@ -49,29 +50,6 @@
 		<table><tr><td colspan=2>filter conditions</td></tr>
 			<tr><td>sort and list</td><td>results</td></tr>
 		</table>
-		<div id="bestiary_list">
-			<div class="beast">
-				<div class="name">Giant Cave Weavers</div>
-				<div class="properties">beast earth</div>
-				<div class="ecology">Forests, Southern</div>
-				<div class="description">7 meter tall arachnids with venom strong enough to paralyze a human.</div>
-			</div>
-			<div class="beast">
-				<div class="name"></div>
-				<div class="properties"></div>
-				<div class="description"></div>
-			</div>
-			<div class="beast">
-				<div class="name"></div>
-				<div class="properties"></div>
-				<div class="description"></div>
-			</div>
-			<div class="beast">
-				<div class="name"></div>
-				<div class="properties"></div>
-				<div class="description"></div>
-			</div>
-		</div>
 	</div>
 </body>
 </html>
