--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -23,7 +23,7 @@
   .title, .result {width: 80%;}
   .notes {width: 15%;}
   h1 {text-align: center;}
-  body {margin: 12px; font-size: 12px;}
+  body {margin: 12px; font-size: 12px; background: #52352b url('https://i.imgur.com/2mKBpVb.png') repeat;}
 </style>
 <style type="text/css" media="print">
   form {display: none;}
@@ -34,7 +34,7 @@
 
 <style>
 	#bestiary_list {display:none;}
-	#bestiary { position: absolute; top: 20%; bottom: 20%; left: 30%; right: 30%; }
+	#bestiary { position: absolute; top: 10%; bottom: 20%; left: 20%; right: 20%; }
 	#bestiary > table { width: 100%; height: 100%;}
 </style>
 
