--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -23,7 +23,10 @@
   .title, .result {width: 80%;}
   .notes {width: 15%;}
   h1 {text-align: center;}
-  body {margin: 12px; font-size: 12px; background: #52352b url('https://i.imgur.com/2mKBpVb.png') repeat;}
+  body {margin: 12px; font-size: 12px; background: #52352b url('https://i.imgur.com/2mKBpVb.png') repeat;
+  #book { position:relative; tex-align:left; }
+
+}
 </style>
 <style type="text/css" media="print">
   form {display: none;}
@@ -45,6 +48,7 @@
 	<div id="navbar">
 		<a href="http://star-fall.boards.net/">&lt; HOME</a>
 	</div>
+  <div id="book"><img src="https://i.imgur.com/NJWcynz.png" style="max-width:100%"></div>
 	<div id="bestiary">
 		<h1>Bestiary</h1>
 		<table><tr><td colspan=2>filter conditions</td></tr>
