--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -11,6 +11,9 @@
   
   $(document).ready(function(){
       console.log(spData);
+      for(var i in spData){
+
+      }
   });
   </script>   
 <script src="https://spreadsheets.google.com/feeds/cells/1frzydbUxPP8IsshA60zzUHn_PIxSNi6zlZ8zw3vsgM8/1/public/values?alt=json-in-script&callback=doData"></script>
@@ -23,10 +26,6 @@
   .title, .result {width: 80%;}
   .notes {width: 15%;}
   h1 {text-align: center;}
-  body {margin: 12px; font-size: 12px; background: #52352b url('https://i.imgur.com/2mKBpVb.png') repeat;
-  #book { position:relative; tex-align:left; }
-
-}
 </style>
 <style type="text/css" media="print">
   form {display: none;}
@@ -36,9 +35,15 @@
 
 
 <style>
+  body {
+    margin: 12px 0px; font-size: 12px;
+    background: #52352b url('https://i.imgur.com/2mKBpVb.png') repeat; 
+  }
 	#bestiary_list {display:none;}
-	#bestiary { position: absolute; top: 10%; bottom: 20%; left: 20%; right: 20%; }
+	#book #bestiary { position: absolute; top: 10%; bottom: 15%; left: 30%; right: 10%; }
 	#bestiary > table { width: 100%; height: 100%;}
+  #book { width: 100%; max-width: 1200px; position:relative; text-align:left; }
+  #book #index { position:absolute; top: 10%; bottom: 15%; left: 3%; width: 15%; }
 </style>
 
 <html>
@@ -48,12 +53,18 @@
 	<div id="navbar">
 		<a href="http://star-fall.boards.net/">&lt; HOME</a>
 	</div>
-  <div id="book"><img src="https://i.imgur.com/NJWcynz.png" style="max-width:100%"></div>
-	<div id="bestiary">
-		<h1>Bestiary</h1>
-		<table><tr><td colspan=2>filter conditions</td></tr>
-			<tr><td>sort and list</td><td>results</td></tr>
-		</table>
-	</div>
+  <div id="book">
+    <img src="https://i.imgur.com/NJWcynz.png" style="max-width:100%">
+    <div id="index" style="border: 1px solid black">
+      <h1>index</h1>
+      <div class="list"></div>
+    </div>
+    <div id="bestiary">
+      <table><tr><td colspan=2>filter conditions</td></tr>
+        <tr><td>sort and list</td><td>results</td></tr>
+      </table>
+    </div>
+  </div>
+
 </body>
 </html>
