--- a/comics/comics.html
+++ b/comics/comics.html
@@ -125,6 +125,17 @@ html, body {
             $("#bottom").append('<table style="display: inline-block; margin: 10px;"><tr><td style="text-align:left;"><b>'+ 'Dilbert' +'</b></td></tr><tr><td><img src="https:' + dil_imgsrc + '"></td></tr></table>');
         }
       );
+    /* get B.C. */
+    var bc_comicpath = 'https://johnhartstudios.com/bc/'+thisYear+'/'+thisMonth+'/'thisDay
+    doCORSRequest({
+          method: 'GET',
+          url: bc_comicpath
+          }, function printGoComics(bc_result) {
+            var bc_imgsrc = $('.entry-content p img', $.parseHTML(bc_result)).attr('src');
+            console.log(dil_imgsrc);
+            $("#bottom").append('<table style="display: inline-block; margin: 10px;"><tr><td style="text-align:left;"><b>'+ 'B.C.' +'</b></td></tr><tr><td><img src="https://johnhartstudios.com' + bc_imgsrc + '"></td></tr></table>');
+        }
+      );
   });
 </script>
 </body>
