--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -5,15 +5,113 @@
 
 <script type="text/javascript">
   var spData = null;
+  var BeastList = {}
+
   function doData(json) {
       spData = json.feed.entry;
+  }
+
+  function addBeast(BeastName){
+    $('#index .list').append('<div class="beastSelect">' + BeastName + '</div>')
+  }
+
+  function fillBeast(BeastName){
+
+    /* Name */
+    $('.beastName').text(BeastName);
+
+    /* Description */
+    if(BeastList[BeastName].Description){
+      $('.beastDesc').html(BeastList[BeastName].Description);
+      $('.beastDesc').css("display","block");
+    }else{ $('.beastDesc').css("display","none")}
+
+    /* Credits */
+    if(BeastList[BeastName].Credit){
+      $('.credits').html(BeastList[BeastName].Credit);
+      $('.credits').css("display","block");
+    }else{ $('.credits').css("display","none") }
+
+    /* Framed Image */
+    $('.beastContainer .beastImg1').remove();
+    if(BeastList[BeastName].ImageOne){
+      $('.beastContainer').append('<img src="'+BeastList[BeastName].ImageOne+'" class="beastImg1">')
+    }
+
+    /* Semitransparent Image */
+    $('#bestiary .beastImg2').remove();
+    if(BeastList[BeastName].ImageTwo){
+      var ImgStyle = "";
+      console.log(BeastList[BeastName].ImagePosition.search("left"))
+      if(BeastList[BeastName].ImagePosition.search("left") == -1) {
+        ImgStyle = ImgStyle.concat("right:0px;")}
+      if(BeastList[BeastName].ImagePosition.search("right") == -1) {
+        ImgStyle = ImgStyle.concat("left:0px;")}
+      if(BeastList[BeastName].ImagePosition.search("top") == -1) {
+        ImgStyle = ImgStyle.concat("bottom:0px;")}
+      if(BeastList[BeastName].ImagePosition.search("bottom") == -1) {
+        ImgStyle = ImgStyle.concat("top:0px;")}
+      if(BeastList[BeastName].ImagePosition.length > 6) {
+        ImgStyle = ImgStyle.concat("max-width:60%;max-height:60%;")
+      }else{
+        ImgStyle = ImgStyle.concat("max-width:100%;max-height:100%;")
+      }
+
+      $('#bestiary').append('<img src="'+BeastList[BeastName].ImageTwo+'" class="beastImg2" style="'+ ImgStyle +'">')
+    }
   }
   
   $(document).ready(function(){
       console.log(spData);
+      var currBeast = ""
       for(var i in spData){
-
+        if( spData[i].gs$cell.row > 1 ) { /* Row 1 is Column Headings */
+          switch( parseInt(spData[i].gs$cell.col) ) {
+            case 1:
+              currBeast = spData[i].gs$cell.$t
+              addBeast(currBeast);
+              BeastList[currBeast] = {}
+            break;
+            case 2:
+              BeastList[currBeast].ScienceName = spData[i].gs$cell.$t
+            break;
+            case 3:
+              BeastList[currBeast].Type = spData[i].gs$cell.$t
+            break;
+            case 4:
+              BeastList[currBeast].SubTypes = spData[i].gs$cell.$t
+            break;
+            case 5:
+              BeastList[currBeast].Difficulty = spData[i].gs$cell.$t
+            break;
+            case 6:
+              BeastList[currBeast].Environment = spData[i].gs$cell.$t
+            break;
+            case 7:
+              BeastList[currBeast].Description = spData[i].gs$cell.$t
+            break;
+            case 8:
+              BeastList[currBeast].Size = spData[i].gs$cell.$t
+            break;
+            case 9:
+              BeastList[currBeast].ImageOne = spData[i].gs$cell.$t
+            break;
+            case 10:
+              BeastList[currBeast].ImageTwo = spData[i].gs$cell.$t
+            break;
+            case 11:
+              BeastList[currBeast].ImagePosition = spData[i].gs$cell.$t
+            break;
+            case 12:
+              BeastList[currBeast].Credit = spData[i].gs$cell.$t
+            break;
+          }
+        }
       }
+      fillBeast("Ghost");
+      $( "#index .list .beastSelect" ).click(function() {
+        fillBeast($( this ).text());
+      });
   });
   </script>   
 <script src="https://spreadsheets.google.com/feeds/cells/1frzydbUxPP8IsshA60zzUHn_PIxSNi6zlZ8zw3vsgM8/1/public/values?alt=json-in-script&callback=doData"></script>
@@ -35,34 +133,101 @@
 
 
 <style>
+  @font-face {
+    font-family: Cardinal;
+    src: url(Fonts/Cardinal.ttf);
+  }
+
   body {
-    margin: 12px 0px; font-size: 12px;
+    margin: 0px; font-size: 12px;
     background: #52352b url('https://i.imgur.com/2mKBpVb.png') repeat; 
   }
 	#bestiary_list {display:none;}
-	#book #bestiary { position: absolute; top: 10%; bottom: 15%; left: 30%; right: 10%; }
-	#bestiary > table { width: 100%; height: 100%;}
-  #book { width: 100%; max-width: 1200px; position:relative; text-align:left; }
+	#book #bestiary {
+    position: absolute;
+    top: 3.5%;
+    bottom: 7%;
+    left: 21.5%;
+    right: 5%; 
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  #book {
+    width: 100%; max-width: 1200px;
+    height: 80%; max-height: 800px;
+    position: relative; text-align: left;
+    background-color: #b05e2f;
+    background-image:url('https://i.imgur.com/HpiYgtk.png');
+    border-radius: 0px 3px 3px 0px;
+  }
   #book #index { position:absolute; top: 10%; bottom: 15%; left: 3%; width: 15%; }
+
+  #navbar { width:100%; background-color:#1a1a1a; padding: 10px; box-sizing:border-box;}
+  #navbar a { color:white; text-decoration: none; display: inline-block; padding: 5px 7px; border: 1px solid white; font-family: Calibri, arial, sans-serif; }
+
+  #index .list { position:absolute; left: 0px; right: 0px; bottom: 0px; top: 45px;
+    overflow:auto; }
+
+  #index .list .beastSelect {
+    width:100%; box-sizing:border-box; padding: 15px;
+    text-align:center;
+    font: 14px / 14px Calibri, arial, sans-serif;
+    border-top: 1px solid #8e493c;
+  }
+  #index .list .beastSelect:hover { background-color: white; }
+
+  h1 {
+    color: #672307;
+    font: 50px / 40px Cardinal, Georgia, serif;
+    margin: 0px; }
+  #bestiary .beastDesc { border: 1px solid #8e493c; margin-left: 10%; margin-right: 40%; padding: 15px; }
+  #bestiary .beastContainer {
+    position: relative;
+    width: 70%; margin-left:15%;
+    max-height: 80%; min-height: 50%; 
+  }
+  #bestiary .beastImg1 {
+    position: absolute;
+    left: 0px; top:0px; bottom: 0px;
+    max-height: 100%; max-width: 100%;
+    padding: 15px 15px;
+  background-color: white;
+  box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4);
+  -moz-box-shadow: 0 1px 2px rgba(34,25,25,0.4);
+  -webkit-box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4);
+  }
+  #bestiary .beastImg1:before { content:''; background-color:black;position:absolute;display:block;top:0px;bottom:0px;left:0px;right:0px; }
+  #bestiary .beastImg2 { position: absolute; }
+  #bestiary .credits { 
+    color: #672307;
+    font: 10px arial, sans-serif;text-align:center; text-transform:uppercase;
+    position:absolute; left:0px; right:0px; bottom:5px;
+  }
 </style>
 
 <html>
 <body>
-	<div id="data"/>
-
 	<div id="navbar">
-		<a href="http://star-fall.boards.net/">&lt; HOME</a>
+		<a href="http://star-fall.boards.net/">&lt; STARFALL HOME</a>
 	</div>
   <div id="book">
-    <img src="https://i.imgur.com/NJWcynz.png" style="max-width:100%">
-    <div id="index" style="border: 1px solid black">
-      <h1>index</h1>
-      <div class="list"></div>
+    <div class="left page">
+      <div id="index">
+        <h1>Bestiary</h1>
+        <h2>of Salem and the Known World</h2>
+        <div class="list"></div>
+      </div>
     </div>
-    <div id="bestiary">
-      <table><tr><td colspan=2>filter conditions</td></tr>
-        <tr><td>sort and list</td><td>results</td></tr>
-      </table>
+    <div class="right page">
+      <div id="bestiary">
+        <h1 class="beastName">Beast Name</h1>
+        <div class="beastContainer">
+          <div class="beastDesc">A long description of the creature goes here</div>
+       </div>
+        <div class="credits">Image and text credits</div>
+      </div>
     </div>
   </div>
 
