--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -138,7 +138,10 @@
     src: url(Fonts/Cardinal.ttf);
   }
 
+  html { height: 100%; }
+
   body {
+    height: 100%;
     margin: 0px; font-size: 12px;
     background: #52352b url('https://i.imgur.com/2mKBpVb.png') repeat; 
   }
@@ -155,8 +158,9 @@
     justify-content: center;
   }
   #book {
-    width: 100%; max-width: 1200px;
+    width: 80%; max-width: 1200px;
     height: 80%; max-height: 800px;
+    margin-top: 10%;
     position: relative; text-align: left;
     background-color: #b05e2f;
     background-image:url('https://i.imgur.com/HpiYgtk.png');
@@ -164,7 +168,15 @@
   }
   #book #index { position:absolute; top: 10%; bottom: 15%; left: 3%; width: 15%; }
 
-  #navbar { width:100%; background-color:#1a1a1a; padding: 10px; box-sizing:border-box;}
+  #navbar { 
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%; 
+    background-color: #1a1a1a; 
+    padding: 10px; 
+    box-sizing: border-box;
+  }
   #navbar a { color:white; text-decoration: none; display: inline-block; padding: 5px 7px; border: 1px solid white; font-family: Calibri, arial, sans-serif; }
 
   #index .list { position:absolute; left: 0px; right: 0px; bottom: 0px; top: 45px;
@@ -204,6 +216,24 @@
     color: #672307;
     font: 10px arial, sans-serif;text-align:center; text-transform:uppercase;
     position:absolute; left:0px; right:0px; bottom:5px;
+  }
+  #book .page {
+    position: absolute;
+    top: 20px; bottom: 20px;
+    background: url(https://i.imgur.com/YH2hlmA.png), -webkit-linear-gradient(left, #e1ddd8 0%, #fffbf6 100%), url(https://i.imgur.com/YH2hlmA.png);
+    background: -moz-linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
+    background: -ms-linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
+    background: url(https://i.imgur.com/YH2hlmA.png), linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
+    box-shadow: inset 0px -1px 2px rgba(50, 50, 50, 0.1), inset -1px 0px 1px rgba(150, 150, 150, 0.2);
+    border-radius: 0px 5px 5px 0px;
+  }
+  #book .page.left { 
+    left: 0px;
+    width: 20%;
+  }
+  #book .page.left { 
+    left: 20%;
+    right: 20px;
   }
 </style>
 
