--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -148,10 +148,10 @@
 	#bestiary_list {display:none;}
 	#book #bestiary {
     position: absolute;
-    top: 3.5%;
-    bottom: 7%;
-    left: 21.5%;
-    right: 5%; 
+    top: 0%;
+    bottom: 0%;
+    left: 0%;
+    right: 0%; 
 
     display: flex;
     flex-direction: column;
@@ -166,7 +166,13 @@
     background-image:url('https://i.imgur.com/HpiYgtk.png');
     border-radius: 0px 3px 3px 0px;
   }
-  #book #index { position:absolute; top: 10%; bottom: 15%; left: 3%; width: 15%; }
+  #book #index { 
+    position: absolute; 
+    top: 0%; 
+    bottom: 0%; 
+    left: 0%; 
+    width: 0%; 
+  }
 
   #navbar { 
     position: absolute;
@@ -227,11 +233,20 @@
     box-shadow: inset 0px -1px 2px rgba(50, 50, 50, 0.1), inset -1px 0px 1px rgba(150, 150, 150, 0.2);
     border-radius: 0px 5px 5px 0px;
   }
+  #book .page h2 {
+    color: #34211a;
+    font-size: 1em;
+    text-align: center;
+    text-shadow: -1px -1px 0 rgba(0,0,0,0.1);
+    font-family: Alegreya SC, Georgia, serif;
+    margin: 0px;
+    margin-right: 25px;
+  }
   #book .page.left { 
     left: 0px;
     width: 20%;
   }
-  #book .page.left { 
+  #book .page.right { 
     left: 20%;
     right: 20px;
   }
