--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -160,18 +160,25 @@
   #book {
     width: 80%; max-width: 1200px;
     height: 80%; max-height: 800px;
-    margin-top: 10%;
-    position: relative; text-align: left;
+    margin-top: 5%;
+    position: relative;
+    text-align: left;
     background-color: #b05e2f;
     background-image:url('https://i.imgur.com/HpiYgtk.png');
     border-radius: 0px 3px 3px 0px;
+
+    border: 1px solid rgba(0,0,0,0.1);
+    box-shadow: 
+      inset 0 2px 3px rgba(255,255,255,0.3),
+      inset 0 -2px 3px rgba(0,0,0,0.3),
+      0 1px 1px rgba(255,255,255,0.9);
   }
   #book #index { 
     position: absolute; 
     top: 0%; 
     bottom: 0%; 
     left: 0%; 
-    width: 0%; 
+    right: 0%; 
   }
 
   #navbar { 
@@ -185,7 +192,9 @@
   }
   #navbar a { color:white; text-decoration: none; display: inline-block; padding: 5px 7px; border: 1px solid white; font-family: Calibri, arial, sans-serif; }
 
-  #index .list { position:absolute; left: 0px; right: 0px; bottom: 0px; top: 45px;
+  #index .list { 
+    position: absolute; 
+    left: 0px; right: 0px; bottom: 0px; top: 45px;
     overflow:auto; }
 
   #index .list .beastSelect {
