--- a/starfall/bestiary.html
+++ b/starfall/bestiary.html
@@ -157,6 +157,7 @@
     flex-direction: column;
     justify-content: center;
   }
+  /* Book leather cover */
   #book {
     width: 80%; max-width: 1200px;
     height: 80%; max-height: 800px;
@@ -164,8 +165,30 @@
     position: relative;
     text-align: left;
     background-color: #b05e2f;
-    background-image:url('https://i.imgur.com/HpiYgtk.png');
+    background-image: url('https://i.imgur.com/HpiYgtk.png');
     border-radius: 0px 3px 3px 0px;
+
+    border: 1px solid rgba(0,0,0,0.1);
+    box-shadow: 
+      inset 0 4px 5px rgba(255,255,255,0.1),
+      inset 0 -4px 5px rgba(0,0,0,0.3),
+      0 1px 1px rgba(255,255,255,0.3);
+  }
+
+  /* Book Spine */
+  #book::before { 
+    content: '';
+    display: block;
+    position: absolute;
+    top: -1%;
+    width: 5%;
+    bottom: -1%;
+    background-color: inherit;
+    background-image: inherit;
+    left: 17.5%;
+    moz-border-radius: 50% / 1%;
+    webkit-border-radius: 50% / 1%;
+    border-radius: 50% / 1%;
 
     border: 1px solid rgba(0,0,0,0.1);
     box-shadow: 
@@ -194,7 +217,8 @@
 
   #index .list { 
     position: absolute; 
-    left: 0px; right: 0px; bottom: 0px; top: 45px;
+    left: 0px; right: 0px; bottom: 0px;
+    top: 100px;
     overflow:auto; }
 
   #index .list .beastSelect {
@@ -234,12 +258,14 @@
   }
   #book .page {
     position: absolute;
-    top: 20px; bottom: 20px;
-    background: url(https://i.imgur.com/YH2hlmA.png), -webkit-linear-gradient(left, #e1ddd8 0%, #fffbf6 100%), url(https://i.imgur.com/YH2hlmA.png);
-    background: -moz-linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
-    background: -ms-linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
+    top: 20px; 
+    bottom: 20px;
+    background: url(https://i.imgur.com/YH2hlmA.png), -webkit-linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
+    background: url(https://i.imgur.com/YH2hlmA.png), -moz-linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
+    background: url(https://i.imgur.com/YH2hlmA.png), -ms-linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
     background: url(https://i.imgur.com/YH2hlmA.png), linear-gradient(left, #e1ddd8 0%, #fffbf6 100%);
     box-shadow: inset 0px -1px 2px rgba(50, 50, 50, 0.1), inset -1px 0px 1px rgba(150, 150, 150, 0.2);
+    overflow: hidden;
     
   }
   #book .page h2 {
@@ -286,6 +312,5 @@
       </div>
     </div>
   </div>
-
 </body>
 </html>
